--- a/babel.config.json
+++ b/babel.config.json
@@ -5,5 +5,5 @@
       "plugins": ["@babel/plugin-transform-modules-commonjs"]
     }
   },
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
