--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development --env development --open"
+    "start": "webpack serve --mode development --env development --history-api-fallback --open"
   },
   "author": "",
   "license": "ISC",
